--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,37 @@
   </head>
 
   <body>
+    <h3>Bookers</h3>
+    <% if user_signed_in? %>
+     <li>
+       <%= link_to "Home", new_user_registration_path %>
+     </li>
+     <li>
+       <%= link_to "Users", user_path %>
+     </li>
+     <li>
+       <%= link_to "Books", books_path %>
+     </li>
+     <li>
+       <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+     </li>
+    <% else %>
+     <li>
+       <%= link_to "Home", root_path %>
+     </li>
+     <li>
+       <%= link_to "About", homes_about_path %>
+     </li>
+     <li>
+       <%= link_to "Sign up", new_user_registration_path %>
+     </li>
+     <li>
+       <%= link_to "Log in", new_user_session_path %>
+     </li>
+    <% end %>
+
     <%= yield %>
+
+    <p class = "footer">CopyRight Infratop.inc</p>
   </body>
 </html>
