--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
-
-<h1>Book detail</h1>
+<h1>Users</h1>
 <table>
     <thead>
         <tr>
-            <th>Title</th>
-            <th>Body</th>
+            <th>image</th>
+            <th>name</th>
         </tr>
     </thead>
     <tbody>
