--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>User info</h1>
+
+<p>name <%=  %></p>
+<p>introduction <%=  %></p>
+<%= link_to 'edit', edit_user_registration_path %>
+
+<h1>New book</h1>
+  <%= form_with model: @book, url: books_path, local: true do |f| %>
+    <p>title</p>
+    <%= f.text_field :title %>
+    <p>opinion</p>
+    <%= f.text_field :body %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
+
+<h1>Books</h1>
+
+<table>
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Body</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% @books.each do |book| %>
+        <tr>
+              <td><%= book.title %></td>
+              <td><%= book.body %></td>
+        </tr>
+        <% end %>
+    </tbody>
+</table>
