[add]top/bootstrap

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,10 +1,26 @@
-<h1>Welcome to Bookers</h1>
-<h3>In Bookers</h3>
-<p>you can share and exchange your opinions , inpressions , and emotions<br>
-about various books!</p>
-<li>
-<%= link_to "Log in", new_user_session_path %>
-</li>
-<li>
-<%= link_to "Sign up", new_user_registration_path %>
-</li>
+<div class = "container">
+    <div class = "row">
+        <h1>Welcome to Bookers</h1>
+    </div>
+
+    <div class = "row">
+        <h3>In Bookers</h3>
+    </div>
+
+    <div class = "row">
+        <p>you can share and exchange your opinions , inpressions , and emotions<br>
+        about various books!</p>
+    </div>
+
+    <div class = "row">
+        <li>
+            <%= link_to "Log in", new_user_session_path %>
+            </li>
+    </div>
+
+    <div class = "row">
+        <li>
+            <%= link_to "Sign up", new_user_registration_path %>
+        </li>
+    </div>
+</div>
