--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,43 +4,57 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <h3>Bookers</h3>
-    <% if user_signed_in? %>
-     <li>
-       <%= link_to "Home", user_path(current_user.id) %>
-     </li>
-     <li>
-       <%= link_to "Users", user_path(current_user.id) %>
-     </li>
-     <li>
-       <%= link_to "Books", books_path %>
-     </li>
-     <li>
-       <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-     </li>
-    <% else %>
-     <li>
-       <%= link_to "Home", root_path %>
-     </li>
-     <li>
-       <%= link_to "About", homes_about_path %>
-     </li>
-     <li>
-       <%= link_to "Sign up", new_user_registration_path %>
-     </li>
-     <li>
-       <%= link_to "Log in", new_user_session_path %>
-     </li>
-    <% end %>
-
-    <%= yield %>
-
-    <p class = "footer">CopyRight Infratop.inc</p>
-  </body>
+      <header class="shadow-sm">
+          <nav class="navbar navbar-expand-lg navbar-light">
+               <div class="container">
+                 <h3>Bookers</h3>
+                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                     <span class="navbar-toggler-icon"></span>
+                 </button>
+                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                   <ul class="navbar-nav ml-auto">
+                       <% if user_signed_in? %>
+                       <li>
+                         <%= link_to "Home", user_path(current_user.id) %>
+                       </li>
+                       <li>
+                         <%= link_to "Users", user_path(current_user.id) %>
+                       </li>
+                       <li>
+                         <%= link_to "Books", books_path %>
+                       </li>
+                       <li>
+                         <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+                       </li>
+                      <% else %>
+                       <li>
+                         <%= link_to "Home", root_path %>
+                       </li>
+                       <li>
+                         <%= link_to "About", homes_about_path %>
+                       </li>
+                       <li>
+                         <%= link_to "Sign up", new_user_registration_path %>
+                       </li>
+                       <li>
+                         <%= link_to "Log in", new_user_session_path %>
+                       </li>
+                      <% end %>
+                   </ul>
+                 </div>
+               </div>
+          </nav>
+       </header>
+       <main class="mb-auto">
+         <%= yield %>
+       </main>
+       <footer>CopyRight Infratop.inc</footer>
+   </body>
 </html>
