--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,5 @@
-<h1>User info</h1>
-
 <div class = "container">
-  <div class = "row">
-      <div class = "col-lg-4">
-        <p>name <%=  %></p>
-        <p>introduction <%=  %></p>
-        <%= link_to 'edit', edit_user_registration_path %>
-
-        <h1>New book</h1>
-          <%= form_with model: @book, url: books_path, local: true do |f| %>
-            <p>title</p>
-            <%= f.text_field :title %>
-            <p>opinion</p>
-            <%= f.text_field :body %>
-            <%= f.submit 'Create Book' %>
-            <%= link_to 'New Post', books_path, class: "btn btn-secondary" %>
-          <% end %>
-      </div>
+<%= render 'books/list', book: @book %>
 
       <div class = "col-lg-8">
         <h1>Books</h1>
