--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,23 @@
+<div class = "container">
+  <%= render 'books/list', book: @book %>
 
-<h1>Book detail</h1>
-<table>
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Body</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @books.each do |book| %>
-        <tr>
+  <div class = "col-lg-8">
+      <h1>Book detail</h1>
+      <table>
+          <thead>
+              <tr>
+                  <th>Title</th>
+                  <th>Body</th>
+              </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+            <tr>
               <td><%= book.title %></td>
               <td><%= book.body %></td>
-        </tr>
-        <% end %>
-    </tbody>
-</table>
+            </tr>
+            <% end %>
+          </tbody>
+      </table>
+  </div>
+</div>
