[update]_list.rb

--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,16 +1,19 @@
   <div class = "row">
       <div class = "col-lg-4">
         <h1>User info</h1>
-        <p>name <%=  %></p>
-        <p>introduction <%=  %></p>
-        <%= link_to 'edit', edit_user_registration_path %>
+        <p>name:  user.name  </p>
+        <p>introduction:  user.introduction </p>
 
         <h1>New book</h1>
           <%= form_with model: book, url: books_path, local: true do |f| %>
-            <p>title</p>
+          <div>
+            <%= f.label :title %><br />
             <%= f.text_field :title %>
-            <p>opinion</p>
+          </div>
+          <div>
+            <%= f.label :opinion %><br />
             <%= f.text_area :body %>
+          </div>
             <%= f.submit 'New Post', class: "btn btn-secondary" %>
           <% end %>
       </div>
