--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,14 @@
        <main class="mb-auto">
          <%= yield %>
        </main>
-       <footer>CopyRight Infratop.inc</footer>
+       <footer>
+           <div class = "containaer mt-5">
+               <div class = "row">
+                   <div class = "mx-auto">
+                       <p>CopyRight Infratop.inc</p>
+                    </div>
+                </div
+            </div>
+       </footer>
    </body>
 </html>
