[add]遷移先設定

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,24 @@
-<h1>Users</h1>
-<table>
-    <thead>
-        <tr>
-            <th>image</th>
-            <th>name</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @books.each do |book| %>
-        <tr>
-              <td><%= book.title %></td>
-              <td><%= book.body %></td>
-        </tr>
-        <% end %>
-    </tbody>
-</table>
+<div class = "container">
+<%= render 'books/list', book: @book %>
+
+<div class = "col-lg-8">
+    <h1>Users</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>name</th>
+                <th>image</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <% @users.each do |user| %>
+            <tr>
+                <td><%= user.name %></td>
+                <td>写真</td>
+                <td><%= link_to "show", user_path(user.id) %></td>
+                </tr>
+            <% end %>
+        </tbody>
+    </table>
+</div>
