--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <%= render 'books/list', book: @book %>
 
   <div class = "col-lg-8">
-      <h1>Book detail</h1>
+      <h1>Books</h1>
       <table>
           <thead>
               <tr>
