--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,22 @@
-<h2>プロフィール編集</h2>
-<%= form_with model:@user, local:true do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <%= f.submit "変更を保存" %>
+<h2>User info</h2>
 
-  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+<%= form_with model:@user, local:true do |f| %>
+  <div>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+
+  <div>
+    <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+    <label for="inputImage">ProfileImage</label>
+    <%= f.attachment_field :profile_image, placeholder: %>
+  </div>
+
+  <div>
+    <%= f.label :introduction %><br />
+    <%= f.text_area :introduction %>
+  </div>
+
+
+  <%= f.submit "Update User" %>
 <% end %>
