--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,7 +9,7 @@
   <div>
     <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
     <label for="inputImage">ProfileImage</label>
-    <%= f.attachment_field :profile_image, placeholder: %>
+    <%= f.attachment_field :profile_image  %>
   </div>
 
   <div>
