--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class = "container">
-<%= render 'books/list', book: @book %>
+<%= render 'books/list', book: @book, user: @user %>
 
 <div class = "col-lg-8">
     <h1>Users</h1>
