--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,17 +1,17 @@
   <div class = "row">
       <div class = "col-lg-4">
         <h1>User info</h1>
-        <p> attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"</p>
-        <p>name:  user.name  </p>
-        <p>introduction:  user.introduction </p>
+        <p> <%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></p>
+        <p>name:<%=  user.name  %></p>
+        <p>introduction: <%= user.introduction %></p>
 
-        <p>= link_to "edit", edit_user_path(@user) </p>
+        <p><%= link_to "edit", edit_user_path(user) %> </p>
 
         <h1>New book</h1>
           <%= form_with model: book, url: books_path, local: true do |f| %>
           <div>
             <%= f.label :title %><br />
-            <%= f.text_field :title %>
+            <%= f.text_field :text %>
           </div>
           <div>
             <%= f.label :opinion %><br />
