--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,19 +1,28 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this obj from being saved:
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
 <div class = "container">
-<%= render 'books/list', book: @book %>
+<%= render 'books/list', book: @book, user: @user %>
 
       <div class = "col-lg-8">
         <h1>Books</h1>
         <table>
           <thead>
             <tr>
+              <th colspan = "1"></th>
               <th>Title</th>
-              <th>Body</th>
+              <th>Opinion</th>
             </tr>
           </thead>
           <tbody>
             <% @books.each do |book| %>
               <tr>
-                <td><%= book.title %></td>
+                <td><%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
+                <td><%= book.text %></td>
                 <td><%= book.body %></td>
               </tr>
             <% end %>
