--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,10 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this obj from being saved:
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
 <div>
-  <p>title：<%= @book.title %></p>
+  <p>title：<%= @book.text %></p>
   <p>opinions：<%= @book.body %></p>
 </div>
