--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class = "container">
-  <%= render 'books/list', book: @book %>
+  <%= render 'books/list', book: @book, user: @user %>
 
   <div class = "col-lg-8">
       <h1>Books</h1>
@@ -13,7 +13,7 @@
           <tbody>
             <% @books.each do |book| %>
             <tr>
-              <td><%= book.title %></td>
+              <td><%= book.text %></td>
               <td><%= book.body %></td>
             </tr>
             <% end %>
