[add]books/show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
           <thead>
               <tr>
                   <th>Title</th>
-                  <th>Body</th>
+                  <th>Opinion</th>
               </tr>
           </thead>
           <tbody>
