--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,26 @@
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this obj from being saved:
-  <% @book.errors.full_messages.each do |message| %>
-    <%= message %>
-  <% end %>
-<% end %>
-<div>
-  <p>title：<%= @book.text %></p>
-  <p>opinions：<%= @book.body %></p>
+<div class = "container">
+  <%= render 'books/list', book: @new_book, user: @user %>
+
+  <div class = "col-lg-8">
+      <h1>Books detail</h1>
+      <table>
+          <thead>
+              <tr>
+                  <th></th>
+                  <th>Title</th>
+                  <th>Opinion</th>
+                  <th colspan = "2"></th>
+              </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><%= attachment_image_tag @book.user.profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
+              <td><%= @book.text %></td>
+              <td><%= @book.body %></td>
+              <td><%= link_to "edit", edit_book_path(@book.id) %></td>
+              <td><%= link_to "destroy", book_path(@book.id), method: :delete, data: {confirm: 'Are You Sure?'}  %></td>
+            </tr>
+          </tbody>
+      </table>
+  </div>
 </div>
