--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,16 +6,16 @@
     <table>
         <thead>
             <tr>
-                <th>name</th>
                 <th>image</th>
+                <th>name</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
             <% @users.each do |user| %>
             <tr>
+                <td><%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
                 <td><%= user.name %></td>
-                <td>写真</td>
                 <td><%= link_to "show", user_path(user.id) %></td>
                 </tr>
             <% end %>
