--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,13 @@
+<div class = "errors">
+    <% if @book.errors.any? %>
+        <h3><%= @book.errors.count %>errors prohibited this obj from being saved:</h3>
+        <% @book.errors.full_messages.each do |message| %>
+             <ul><li><%= message %></li></ul>
+        <% end %>
+    <% end %>
+</div>
+
+
 <h2>Editing Book</h2>
 
 <%= form_with model:@book, local:true do |f| %>
