[add]各ページのリンク先指定

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class = "errors">
     <% if @user.errors.any? %>
         <h3><%= @user.errors.count %>errors prohibited this obj from being saved:</h3>
-             <ul><li>Name is too short (minimum is 2 characters</li></ul>
+             <ul><li>Name is too short (minimum is 2 characters)</li></ul>
         <% end %>
     <% end %>
 </div>
