--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,7 +28,11 @@
               <% @books.each do |book| %>
                 <tr>
                   <td><%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
-                  <td><%= book.text %></td>
+                  <td>
+                    <%= link_to book_path(book.id) do %>
+                      <%= book.text %>
+                    <% end %>
+                  </td>
                   <td><%= book.body %></td>
                 </tr>
               <% end %>
