--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,8 +14,17 @@
           </thead>
           <tbody>
             <tr>
-              <td><%= attachment_image_tag @book.user.profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
-              <td><%= @book.text %></td>
+              <td>
+                <%= link_to user_path(@user.id) do %>
+                <div><%= attachment_image_tag @book.user.profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></div>
+                <div><%= @book.user.name %></div>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to book_path(@book.id) do %>
+                <%= @book.text %>
+                <% end %>
+              </td>
               <td><%= @book.body %></td>
               <td><%= link_to "edit", edit_book_path(@book.id) %></td>
               <td><%= link_to "destroy", book_path(@book.id), method: :delete, data: {confirm: 'Are You Sure?'}  %></td>
