--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
       <table>
           <thead>
               <tr>
+                  <th></th>
                   <th>Title</th>
                   <th>Opinion</th>
               </tr>
@@ -13,7 +14,14 @@
           <tbody>
             <% @books.each do |book| %>
             <tr>
-              <td><%= book.text %></td>
+              <td>
+                <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+              </td>
+              <td>
+                <%= link_to book_path(book.id) do %>
+                <%= book.text %>
+                <% end %>
+              </td>
               <td><%= book.body %></td>
             </tr>
             <% end %>
