--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   </head>
 
   <body>
+
       <header class="shadow-sm">
           <nav class="navbar navbar-expand-lg navbar-light">
+
                <div class="container">
                  <h3>Bookers</h3>
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,6 +55,12 @@
           </nav>
        </header>
        <main class="mb-auto">
+            <div>
+            <% flash.each do |message_type, message| %>
+            <%= content_tag :div, message, class: message_type %>
+            <% end %>
+            </div>
+
          <%= yield %>
        </main>
        <footer>
