--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,8 +26,10 @@
                 <% end %>
               </td>
               <td><%= @book.body %></td>
-              <td><%= link_to "edit", edit_book_path(@book.id) %></td>
-              <td><%= link_to "destroy", book_path(@book.id), method: :delete, data: {confirm: 'Are You Sure?'}  %></td>
+              <% if @user.id == current_user.id %>
+                <td><%= link_to "edit", edit_book_path(@book.id) %></td>
+                <td><%= link_to "destroy", book_path(@book.id), method: :delete, data: {confirm: 'Are You Sure?'}  %></td>
+              <% end %>
             </tr>
           </tbody>
       </table>
