--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,10 +1,10 @@
 <div class = "container">
     <div class = "row">
-        <h1>Welcome to Bookers</h1>
+        <h1>Welcome to <i class="fas fa-book"></i>Bookers!!</h1>
     </div>
 
     <div class = "row">
-        <h3>In Bookers</h3>
+        <p>In <i class="fas fa-book"></i>Bookers,</p>
     </div>
 
     <div class = "row">
