--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,22 +1,25 @@
   <div class = "row">
-      <div class = "col-lg-4">
+      <div class = "col-md-4">
         <h1>User info</h1>
         <p> <%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></p>
         <p>name:<%=  user.name  %></p>
         <p>introduction: <%= user.introduction %></p>
 
-        <p><%= link_to "edit", edit_user_path(user) %> </p>
+        <p><%= link_to edit_user_path(user) do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
+        </p>
 
         <h1>New book</h1>
           <%= form_with model: book, url: books_path, local: true do |f| %>
             <div>
               <%= f.label :title %><br />
-              <%= f.text_field :text %>
+              <%= f.text_field :title %>
             </div>
             <div>
               <%= f.label :opinion %><br />
               <%= f.text_area :body %>
             </div>
-            <%= f.submit 'New Post', class: "btn btn-secondary" %>
+            <%= f.submit 'Create Book', class: "btn btn-secondary" %>
           <% end %>
       </div>
