--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -13,7 +13,7 @@
 <%= form_with model:@book, local:true do |f| %>
   <div>
     <%= f.label :Title %><br />
-    <%= f.text_field :text %>
+    <%= f.text_field :title %>
   </div>
 
   <div>
@@ -22,3 +22,7 @@
   </div>
   <%= f.submit "Update Book" %>
 <% end %>
+
+<%= link_to "Show", book_path(@book) %>
+
+<%= link_to "Back", books_path %>
