--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
 
     <%= render 'books/list', book: @book, user: @user %>
 
-        <div class = "col-lg-8">
+        <div class = "col-md-8">
            <h1>Books</h1>
            <table>
               <thead>
@@ -27,10 +27,14 @@
               <tbody>
               <% @books.each do |book| %>
                 <tr>
-                  <td><%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
+                  <td>
+                    <%= link_to user_path(book.user.id) do %>
+                      <%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+                    <% end %>
+                  </td>
                   <td>
                     <%= link_to book_path(book.id) do %>
-                      <%= book.text %>
+                      <%= book.title %>
                     <% end %>
                   </td>
                   <td><%= book.body %></td>
