--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,8 @@
 <div class = "container">
   <%= render 'books/list', book: @new_book, user: @user %>
 
-  <div class = "col-lg-8">
-      <h1>Books detail</h1>
+  <div class = "col-md-8">
+      <h1>Book detail</h1>
       <table>
           <thead>
               <tr>
@@ -16,19 +16,19 @@
             <tr>
               <td>
                 <%= link_to user_path(@user.id) do %>
-                <div><%= attachment_image_tag @book.user.profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></div>
+                <div><%= attachment_image_tag @book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></div>
                 <div><%= @book.user.name %></div>
                 <% end %>
               </td>
               <td>
                 <%= link_to book_path(@book.id) do %>
-                <%= @book.text %>
+                <%= @book.title %>
                 <% end %>
               </td>
               <td><%= @book.body %></td>
               <% if @user.id == current_user.id %>
-                <td><%= link_to "edit", edit_book_path(@book.id) %></td>
-                <td><%= link_to "destroy", book_path(@book.id), method: :delete, data: {confirm: 'Are You Sure?'}  %></td>
+                <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
+                <td><%= link_to "Destroy", book_path(@book.id), method: :delete, data: {confirm: 'Are You Sure?'}  %></td>
               <% end %>
             </tr>
           </tbody>
