--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <script src="https://kit.fontawesome.com/448938d6cc.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -16,7 +17,7 @@
           <nav class="navbar navbar-expand-lg navbar-light">
 
                <div class="container">
-                 <h3>Bookers</h3>
+                 <h3><%= link_to "Bookers", root_path %></h3>
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                      <span class="navbar-toggler-icon"></span>
                  </button>
@@ -24,29 +25,45 @@
                    <ul class="navbar-nav ml-auto">
                        <% if user_signed_in? %>
                        <li>
-                         <%= link_to "Home", user_path(current_user.id) %>
+                         <%= link_to user_path(current_user.id) do %>
+                         <i class="fas fa-home">Home</i>
+                         <% end %>
                        </li>
                        <li>
-                         <%= link_to "Users", users_path %>
+                         <%= link_to users_path do %>
+                         <i class="fas fa-users">Users</i>
+                         <% end %>
                        </li>
                        <li>
-                         <%= link_to "Books", books_path %>
+                         <%= link_to books_path do %>
+                         <i class="fas fa-book-open">Books</i>
+                         <% end %>
                        </li>
                        <li>
-                         <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+                         <%= link_to  destroy_user_session_path, method: :delete do %>
+                         <i class="fas fa-sign-out-alt">Log out</i>
+                         <% end %>
                        </li>
                       <% else %>
                        <li>
-                         <%= link_to "Home", root_path %>
+                         <%= link_to root_path do %>
+                         <i class="fas fa-home">Home</i>
+                         <% end %>
                        </li>
                        <li>
-                         <%= link_to "About", homes_about_path %>
+                         <%= link_to homes_about_path do %>
+                         <i class="fas fa-link">About</i>
+                         <% end %>
                        </li>
                        <li>
-                         <%= link_to "Sign up", new_user_registration_path %>
+                         <%= link_to new_user_registration_path do %>
+                         <i class="fas fa-user-plus">Sign up</i>
+                         <% end %>
                        </li>
                        <li>
-                         <%= link_to "Log in", new_user_session_path %>
+                         <%= link_to new_user_session_path do %>
+                         <i class="fas fa-sign-in-alt">Log in</i>
+                         <% end %>
                        </li>
                       <% end %>
                    </ul>
