--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
 <div class = "container">
 <%= render 'books/list', book: @book, user: @user %>
 
-<div class = "col-lg-8">
+<div class = "col-md-8">
     <h1>Users</h1>
-    <table>
+    <table class = "table table-striped">
         <thead>
             <tr>
                 <th>image</th>
@@ -16,7 +16,7 @@
             <tr>
                 <td><%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
                 <td><%= user.name %></td>
-                <td><%= link_to "show", user_path(user.id) %></td>
+                <td><%= link_to "Show", user_path(user.id) %></td>
                 </tr>
             <% end %>
         </tbody>
