--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class = "container">
   <%= render 'books/list', book: @book, user: @user %>
 
-  <div class = "col-lg-8">
+  <div class = "col-md-8">
       <h1>Books</h1>
       <table>
           <thead>
@@ -15,11 +15,13 @@
             <% @books.each do |book| %>
             <tr>
               <td>
-                <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+                <%= link_to user_path(@user.id) do %>
+                  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+                <% end %>
               </td>
               <td>
                 <%= link_to book_path(book.id) do %>
-                <%= book.text %>
+                <%= book.title %>
                 <% end %>
               </td>
               <td><%= book.body %></td>
