--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,12 @@
 
   <body>
 
-      <header class="shadow-sm">
-          <nav class="navbar navbar-expand-lg navbar-light">
-
-               <div class="container">
-                 <h3><%= link_to "Bookers", root_path %></h3>
+      <header>
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                 <%= link_to  root_path, class: "navbar-brand" do %>
+                   <span>Bookers</span>
+                 <% end %>
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                      <span class="navbar-toggler-icon"></span>
                  </button>
