--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,11 +1,11 @@
   <div class = "row">
-      <div class = "col-md-4">
+      <div class = "col-md-3">
         <h1>User info</h1>
         <p> <%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></p>
         <p>name:<%=  user.name  %></p>
         <p>introduction: <%= user.introduction %></p>
 
-        <p><%= link_to edit_user_path(user) do %>
+        <p><%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block " do %>
         <i class="fas fa-user-cog"></i>
         <% end %>
         </p>
