--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,9 @@
-<div class = "container">
+<div class = "container px-5 px-sm-0">
   <%= render 'books/list', book: @new_book, user: @user %>
 
-  <div class = "col-md-8">
+  <div class = "col-md-8 offset-md-1">
       <h1>Book detail</h1>
-      <table>
+      <table class = "table table-hover table-inverse">
           <thead>
               <tr>
                   <th></th>
@@ -16,7 +16,7 @@
             <tr>
               <td>
                 <%= link_to user_path(@user.id) do %>
-                <div><%= attachment_image_tag @book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></div>
+                <div><%= attachment_image_tag @book.user, :profile_image, :fill, 70, 70, fallback: "no_image.jpg"%></div>
                 <div><%= @book.user.name %></div>
                 <% end %>
               </td>
