--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
-<div class = "container">
+<div class = "container px-5 px-sm-0">
 <%= render 'books/list', book: @book, user: @user %>
 
-<div class = "col-md-8">
+<div class = "col-md-8 offset-md-1">
     <h1>Users</h1>
-    <table class = "table table-striped">
+    <table class = "table table-hover table-inverse">
         <thead>
             <tr>
                 <th>image</th>
@@ -14,7 +14,7 @@
         <tbody>
             <% @users.each do |user| %>
             <tr>
-                <td><%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
+                <td><%= attachment_image_tag user, :profile_image, :fill, 70, 70, fallback: "no_image.jpg"%></td>
                 <td><%= user.name %></td>
                 <td><%= link_to "Show", user_path(user.id) %></td>
                 </tr>
