--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
-<div class = "container">
+<div class = "container px-5 px-sm-0">
   <%= render 'books/list', book: @book, user: @user %>
 
-  <div class = "col-md-8">
+  <div class = "col-md-8 offset-md-1">
       <h1>Books</h1>
-      <table>
+      <table class = "table table-hover table-inverse">
           <thead>
               <tr>
                   <th></th>
@@ -16,7 +16,7 @@
             <tr>
               <td>
                 <%= link_to user_path(@user.id) do %>
-                  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+                  <%= attachment_image_tag @user, :profile_image, :fill, 70, 70, fallback: "no_image.jpg"%>
                 <% end %>
               </td>
               <td>
