[finish]レイアウト変更

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,28 +1,39 @@
-<div class = "errors">
-    <% if @book.errors.any? %>
-        <h3><%= @book.errors.count %>errors prohibited this obj from being saved:</h3>
-        <% @book.errors.full_messages.each do |message| %>
-             <ul><li><%= message %></li></ul>
+<div class ="container">
+  <div class ="row">
+    <div class ="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+
+      <h2>Editing Book</h2>
+
+      <div class = "errors">
+        <% if @book.errors.any? %>
+        <span class="text-danger">
+          <h3><%= @book.errors.count %>errors prohibited this obj from being saved:</h3>
+          <% @book.errors.full_messages.each do |message| %>
+             <ul>
+               <li><%= message %></li>
+              </ul>
+           <% end %>
+        </span>
         <% end %>
-    <% end %>
+      </div>
+
+      <%= form_with model:@book, local:true do |f| %>
+        <div class = "form-group">
+          <%= f.label :Title %><br />
+          <%= f.text_field :title, class: "form-control" %>
+        </div>
+
+        <div class = "form-group">
+          <%= f.label :Opinion %><br />
+          <%= f.text_area :body, class: "form-control" %>
+        </div>
+        <%= f.submit "Update Book", class: "btn btn-success" %>
+      <% end %>
+
+      <%= link_to "Show", book_path(@book) %>
+
+      <%= link_to "Back", books_path %>
+
+    </div>
+  </div>
 </div>
-
-
-<h2>Editing Book</h2>
-
-<%= form_with model:@book, local:true do |f| %>
-  <div>
-    <%= f.label :Title %><br />
-    <%= f.text_field :title %>
-  </div>
-
-  <div>
-    <%= f.label :Opinion %><br />
-    <%= f.text_area :body %>
-  </div>
-  <%= f.submit "Update Book" %>
-<% end %>
-
-<%= link_to "Show", book_path(@book) %>
-
-<%= link_to "Back", books_path %>
