--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -12,14 +12,14 @@
 
         <h1>New book</h1>
           <%= form_with model: book, url: books_path, local: true do |f| %>
-            <div>
+            <div class = "form-group">
               <%= f.label :title %><br />
-              <%= f.text_field :title %>
+              <%= f.text_field :title, class: "form-control" %>
             </div>
-            <div>
+            <div class = "form-group">
               <%= f.label :opinion %><br />
-              <%= f.text_area :body %>
+              <%= f.text_area :body, class: "form-control" %>
             </div>
-            <%= f.submit 'Create Book', class: "btn btn-secondary" %>
+            <%= f.submit 'Create Book', class: "btn btn-success" %>
           <% end %>
       </div>
