--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,7 +29,7 @@
                 <tr>
                   <td>
                     <%= link_to user_path(book.user.id) do %>
-                      <%= attachment_image_tag book.user, :profile_image, :fill, 70, 70, fallback: "no_image.jpg"%>
+                      <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50' %>
                     <% end %>
                   </td>
                   <td>
