--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,7 +16,7 @@
             <tr>
               <td>
                 <%= link_to user_path(@user.id) do %>
-                <div><%= attachment_image_tag @book.user, :profile_image, :fill, 70, 70, fallback: "no_image.jpg"%></div>
+                <div><%= attachment_image_tag @book.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50'%></div>
                 <div><%= @book.user.name %></div>
                 <% end %>
               </td>
@@ -27,8 +27,8 @@
               </td>
               <td><%= @book.body %></td>
               <% if @user.id == current_user.id %>
-                <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
-                <td><%= link_to "Destroy", book_path(@book.id), method: :delete, data: {confirm: 'Are You Sure?'}  %></td>
+                <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></td>
+                <td><%= link_to "Destroy", book_path(@book.id), method: :delete, data: {confirm: 'Are You Sure?'}, class: "btn btn-danger"  %></td>
               <% end %>
             </tr>
           </tbody>
