--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,36 +2,42 @@
   <div class ="row">
     <div class ="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
+      <h2>User info</h2>
 
-<div class = "errors">
-    <% if @user.errors.any? %>
-        <h3><%= @user.errors.count %>errors prohibited this obj from being saved:</h3>
-             <ul><li>Name is too short (minimum is 2 characters)</li></ul>
-    <% end %>
+      <div class = "errors ">
+        <% if @user.errors.any? %>
+        <span class="text-danger">
+          <h3><%= @user.errors.count %>errors prohibited this obj from being saved:</h3>
+          <ul>
+            <li>Name is too short (minimum is 2 characters)</li>
+          </ul>
+        </span>
+        <% end %>
+      </div>
 
+
+
+      <%= form_with model:@user, local:true do |f| %>
+        <div class = "form-group">
+          <%= f.label :name %><br />
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+
+        <div>
+          <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+          <label for="inputImage">ProfileImage</label>
+          <%= f.attachment_field :profile_image  %>
+        </div>
+
+        <div>
+          <%= f.label :introduction %><br />
+          <%= f.text_area :introduction, class: "form-control" %>
+        </div>
+
+
+        <%= f.submit "Update User", class: "btn btn-secondary" %>
+      <% end %>
+
+    </div>
+  </div>
 </div>
-
-
-<h2>User info</h2>
-
-<%= form_with model:@user, local:true do |f| %>
-  <div>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-
-  <div>
-    <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
-    <label for="inputImage">ProfileImage</label>
-    <%= f.attachment_field :profile_image  %>
-  </div>
-
-  <div>
-    <%= f.label :introduction %><br />
-    <%= f.text_area :introduction %>
-  </div>
-
-
-  <%= f.submit "Update User" %>
-<% end %>
-</div></div></div>
