--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,10 @@
 <div class = "container px-5 px-sm-0">
+
 <%= render 'books/list', book: @book, user: @user %>
 
 <div class = "col-md-8 offset-md-1">
     <h1>Users</h1>
+
     <table class = "table table-hover table-inverse">
         <thead>
             <tr>
@@ -14,11 +16,12 @@
         <tbody>
             <% @users.each do |user| %>
             <tr>
-                <td><%= attachment_image_tag user, :profile_image, :fill, 70, 70, fallback: "no_image.jpg"%></td>
+                <td><%= attachment_image_tag user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50'%></td>
                 <td><%= user.name %></td>
                 <td><%= link_to "Show", user_path(user.id) %></td>
                 </tr>
             <% end %>
         </tbody>
     </table>
+
 </div>
