--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,10 @@
 
   <div class = "col-md-8 offset-md-1">
       <h1>Books</h1>
+
+
       <table class = "table table-hover table-inverse">
+
           <thead>
               <tr>
                   <th></th>
@@ -11,12 +14,13 @@
                   <th>Opinion</th>
               </tr>
           </thead>
+
           <tbody>
             <% @books.each do |book| %>
             <tr>
               <td>
                 <%= link_to user_path(@user.id) do %>
-                  <%= attachment_image_tag @user, :profile_image, :fill, 70, 70, fallback: "no_image.jpg"%>
+                  <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50'%>
                 <% end %>
               </td>
               <td>
@@ -28,6 +32,8 @@
             </tr>
             <% end %>
           </tbody>
+
       </table>
+
   </div>
 </div>
